# cripto

./: .gitignore  README.md
.github/workflows/: ci.yml  deploy.yml
crates/aes-modes/: Cargo.toml
crates/aes-modes/src/: lib.rs
crates/stego/src/: lib.rs
web/: astro.config.mjs  package-lock.json  package.json
web/public/: cv.html  eddndev_public.json
web/src/: content.config.ts
web/src/components/: Footer.astro  Header.astro  Hero.astro  HeroDecorations.astro  PracticeCard.astro
web/src/components/aes-modes/: AesModesWorkspace.tsx  useAesModesWasm.ts
web/src/components/matrix/: MatrixCalculator.tsx  MatrixEditor.tsx  ResultPanel.tsx  SlotBank.tsx  drag.ts  resolve.ts
web/src/content/practices/: aes-modes-es.mdx  aes-modes.mdx  affine-cipher-es.mdx  affine-cipher.mdx  matrix-calculator-es.mdx  matrix-calculator.mdx  steganography-es.mdx  steganography.mdx
web/src/layouts/: Base.astro
web/src/pages/: index.astro
web/src/pages/es/: index.astro
web/src/pages/es/practices/: aes-modes.astro  affine-cipher.astro  index.astro  matrix-calculator.astro  rsa.astro  steganography.astro
web/src/pages/practices/: aes-modes.astro  affine-cipher.astro  index.astro  matrix-calculator.astro  rsa.astro  steganography.astro
web/src/scripts/: smooth-scroll.ts
web/src/scripts/animations/: hero-timeline.ts  scroll-animations.ts
web/src/styles/: global.css
web/src/wasm/aes-modes/: aes_modes_practice.d.ts  aes_modes_practice.js  aes_modes_practice_bg.wasm  aes_modes_practice_bg.wasm.d.ts  package.json
