[package]
name = "aes-modes-practice"
version = "0.1.0"
edition = "2021"

[lib]
name = "aes_modes_practice"
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
aes = "0.8"
cipher = "0.4"
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac", "sha2"] }
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
hex = "0.4"
